# BOX

./: .gitignore  Arch_Guide.md  SUMMARY.md  SYSTEM_DOCUMENTATION.md  WEB.md  response.md
boxing-web/: Cargo.toml  build_log.txt  convert_to_onnx.py  create_placeholder_onnx.py  train_synthetic.py
boxing-web/src/: lib.rs  shader.wgsl
boxing-web/src/bridge/: classifier_integration.rs  hand_landmarks.rs  landmarks.rs  mod.rs
boxing-web/src/classifier/: buffer.rs  features.rs  mod.rs  model.rs
boxing-web/src/physics/: angles.rs  arm_ik.rs  confidence_gate.rs  depth.rs  detection.rs  extrapolation.rs  kalman.rs  kinematic_constraints.rs  linear_predictor.rs  mod.rs  one_euro.rs  state.rs  velocity.rs
boxing-web/src/renderer/: debug_ui.rs  mod.rs  shapes.rs  skeleton.rs  state.rs
boxing-web/web/: index.html  main.js
python-tracker/: ballistic_engine.py  boxing_game.py  comprehensive_documentation.md  convert_to_onnx.py  depth_estimator.py  depth_manager.py  flow_gated_validator.py  fusion_detector.py  generate_synthetic_data.py  hand_renderer.py  hand_tracker.py  hand_tracker_hybrid.py  hand_tracker_invincible.py  hand_tracker_lstm.py  hand_tracker_mt.py  hybrid_detector.py  ik_solver.py  lstm_predictor.py  master_vision.py  motion_tracker.py  occlusion_handler.py  onnx_detector.py  punch_fsm.py  requirements.txt  signal_processor.py  skeleton_hit_detector.py  telemetry.py  test_lstm_predictor.py  train_classifier.py
python-tracker/punches/: punch_20251210_230640_001.csv  punch_20251210_230713_001.csv  punch_20251210_230713_002.csv  punch_20251210_230714_003.csv  (+708 more)
