[package]
name = "boxing-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "24"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "console"
]}
js-sys = "0.3"
console_error_panic_hook = "0.1"
bytemuck = { version = "1.14", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
